5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1716_2496.log
== TEST (2019-05-09 16:31:11) 
-- CODE:
c = 0

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:06:15) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:06:15) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:06:17) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:22) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:29) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:36) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:50:34) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:50:44) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:51:11) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:51:23) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:51:39) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:51:51) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:52:10) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:52:28) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:52:43) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:53:23) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:53:43) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:54:03) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:54:54) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:55:01) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:05:31) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:05:42) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:23:37) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:34:05) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:34:14) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:37:26) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:40:45) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:41:16) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:10:21) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:10:31) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:23:51) 
-- CODE:
cont = 0

num = int(input("Digite um numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:27:23) 
-- CODE:
cont = 0

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num != -1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:32:29) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
0.359424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = cont + num
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:32:36) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- EXECUTION TIME:
0.315383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = cont + num
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:32:39) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- EXECUTION TIME:
0.388828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = cont + num
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:32:39) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- EXECUTION TIME:
0.464454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = cont + num
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:32:39) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	
num = int(input("Numero: "))
-- EXECUTION TIME:
0.6701
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = cont + num
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:33:00) 
-- CODE:
num = int(input("Numero: "))

while(num != -1):
	print(x)
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:33:43) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	print(x)
	x = cont + num
	
num = int(input("Numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:34:21) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	print(x)
	x = soma + num
	
num = int(input("Numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:34:21) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	print(x)
	x = soma + num
	
num = int(input("Numero: "))
-- EXECUTION TIME:
0.281747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 4, in <module>
    print(x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:34:48) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	x = soma + num
	print(x)
	
num = int(input("Numero: "))
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:35:23) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	x = soma + num
	print(x)
	
num = int(input("Numero: "))
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:05:12) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:05:17) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:05:22) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:05:24) 
-- CODE:
num = int(input("Numero: "))
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- EXECUTION TIME:
0.977084
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
Numero: Numero: Numero: Numero: Numero: Numero: Numero: Numero: 0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Numero: Numero: Numero: Numero: 32653
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:07:03) 
-- CODE:
cont = 0
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
1241.11
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:07:55) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:08:33) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
	
print(soma)

-- EXECUTION TIME:
0.750108
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:10:03) 
-- CODE:
cont = 0
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
843.254
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:10:04) 
-- CODE:
cont = 0
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
395.985
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:42:04) 
-- CODE:
cont = 0
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
1099.2
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:45:04) 
-- CODE:
cont = 0
num = int(input("Numero: "))

while(num != -1):
	print()
	x = cont + num
	

-- EXECUTION TIME:
726.833
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:51:01) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
print(soma)
-- EXECUTION TIME:
0.148176
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:51:07) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:53:42) 
-- CODE:
num = 0
soma = 0
while(num != -1):
	soma = soma + num
	num = int(input("Numero: "))
print(soma)
-- EXECUTION TIME:
0.168495
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
